<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basketRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@drawable/item_row" >

    <TextView
        android:id="@+id/plusTitle"
        android:textColor="#b3b3b3"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:text="@string/reviewPlus"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/plus"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/minusTitle"
        android:textColor="#b3b3b3"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:text="@string/reviewMinus"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/minus"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/commentTitle"
        android:textColor="#b3b3b3"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:text="@string/reviewComment"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/comment"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/user"
	        android:textColor="#b3b3b3"
        	android:textStyle="italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:textSize="9dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="10dp" />
	    
	    <TextView
	        android:id="@+id/city"
	        android:textColor="#b3b3b3"
        	android:textStyle="italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:textSize="9dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp" />
	    
	    <TextView
	        android:id="@+id/date"
	        android:textColor="#b3b3b3"
        	android:textStyle="italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:textSize="9dp"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="5dp" />
    
	    <RatingBar
	        android:id="@+id/rating"
	        style="?android:attr/ratingBarStyleSmall"
	        android:progressDrawable="@drawable/raiting"
	        android:numStars="5"
	        android:rating="3"
	        android:focusable="false"
	        android:layout_marginLeft="7dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    
    </LinearLayout>
    
</LinearLayout>